--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .app-wrapper {
   margin: 0 auto;
   display: grid;
-  width: 1200px;
   grid-template-areas: "h h" "n c";
+  height: 100vh;
 
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
